Mqtt connection error handling